--- a/ESBackupAndReplication/ESBackupAndReplication.csproj
+++ b/ESBackupAndReplication/ESBackupAndReplication.csproj
@@ -32,8 +32,23 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Common.Logging, Version=3.3.1.0, Culture=neutral, PublicKeyToken=af08829b84f0328e, processorArchitecture=MSIL">
+      <HintPath>..\packages\Common.Logging.3.3.1\lib\net40\Common.Logging.dll</HintPath>
+    </Reference>
+    <Reference Include="Common.Logging.Core, Version=3.3.1.0, Culture=neutral, PublicKeyToken=af08829b84f0328e, processorArchitecture=MSIL">
+      <HintPath>..\packages\Common.Logging.Core.3.3.1\lib\net40\Common.Logging.Core.dll</HintPath>
+    </Reference>
+    <Reference Include="ESBackupAndReplication, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>bin\Debug\ESBackupAndReplication.dll</HintPath>
+    </Reference>
+    <Reference Include="Quartz, Version=2.5.0.0, Culture=neutral, PublicKeyToken=f6b8c98a402cc8a4, processorArchitecture=MSIL">
+      <HintPath>..\packages\Quartz.2.5.0\lib\net40\Quartz.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Runtime.Serialization" />
+    <Reference Include="System.ServiceModel" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -43,6 +58,16 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AppData\Authentication\User.cs" />
+    <Compile Include="AppData\CRON\CronScheduler.cs" />
+    <Compile Include="AppData\CRON\Jobs\TemplateBackupJob.cs" />
+    <Compile Include="AppData\Initializer.cs" />
+    <Compile Include="AppData\Interfaces\IRunnable.cs" />
+    <Compile Include="Connected Services\ESBackupServerService\Reference.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </Compile>
     <Compile Include="ESBackupAndReplicationService.cs">
       <SubType>Component</SubType>
     </Compile>
@@ -54,6 +79,60 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <None Include="Connected Services\ESBackupServerService\ESBackupAndReplication.ESBackupServerService.Configuration.datasource">
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </None>
+    <None Include="Connected Services\ESBackupServerService\ESBackupAndReplication.ESBackupServerService.LoginResponse.datasource">
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </None>
+    <None Include="Connected Services\ESBackupServerService\ESBackupAndReplication.ESBackupServerService.RegistrationResponse.datasource">
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </None>
+    <None Include="Connected Services\ESBackupServerService\ESBackupServerService.wsdl" />
+    <None Include="Connected Services\ESBackupServerService\ESBackupServerService.xsd">
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="Connected Services\ESBackupServerService\ESBackupServerService1.xsd">
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="Connected Services\ESBackupServerService\ESBackupServerService2.xsd">
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="Connected Services\ESBackupServerService\ESBackupServerService3.xsd">
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="Connected Services\ESBackupServerService\ESBackupServerService4.xsd">
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="Connected Services\ESBackupServerService\ESBackupServerService5.xsd">
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="job_scheduling_data_2_0.xsd">
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup>
+    <WCFMetadata Include="Connected Services\" />
+  </ItemGroup>
+  <ItemGroup>
+    <WCFMetadataStorage Include="Connected Services\ESBackupServerService\" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Connected Services\ESBackupServerService\ESBackupServerService.disco" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Connected Services\ESBackupServerService\configuration91.svcinfo" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Connected Services\ESBackupServerService\configuration.svcinfo" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Connected Services\ESBackupServerService\Reference.svcmap">
+      <Generator>WCF Proxy Generator</Generator>
+      <LastGenOutput>Reference.cs</LastGenOutput>
+    </None>
+  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
